# UMSL

./: README.md
C++/: README.md
CS 5130/: README.md
CS2700/: README.md
CS2750/: README.md  makefile  master.c  worker.c
CS4250/: front.h  hw5.c  input.txt
CS5130/: README.md
CS5130/Homeworks/: HW_1_Advanced_Algorithm.ipynb  README.md
CS5130/Homeworks/HW_1/: README.md
CS5130/Homeworks/HW_2/: Advanced_Algorithm_HW2.ipynb
CS5130/Homeworks/HW_3/: Advanced_Algorith_HW3.ipynb
CS5130/Homeworks/HW_4/: Advanced_Algorith_HW4.ipynb
CS5130/Homeworks/HW_5/: Advanced_Algorithm_HW5.ipynb
CS5130/data/: README.md  nsp2.hhba3m.txt
CS5130/project/: README.md  Tile_sheet.tsx  main.py  path_algorithm.py  settings.py  sprites.py  test_data.json  tile_map.py  utility.py
CS5130/project/maps/: map.tmx
CS5300/: AI_homework4.ipynb  AI_homework5.ipynb
CS5300/AI Project/: AI5300_PROJ.ipynb  README.md
CS5340/: ML1.ipynb  ML2.ipynb  ML3.ipynb  ML4.ipynb
CS5390/: README.md
CS5390/DL_Phase6/: README.md
CS5390/DL_Phase_1_3/: DL_phase_1to2.ipynb  README.md
CS5390/DL_Phase_3_5/: DL_phase3_5.ipynb  README.md
CS5390/DL_Phase_6/: DL_Phase6.ipynb
CS5500/: README.md
CS5500/Database_Schema/: README.md  raw_scheme.json
CS5700/: README.md
CS5700/srt_method/: README.md  SRT_method.cpp  SRT_method.h  main.cpp  makefile  result.txt  srt
CS5880/: CS5880_Report.docx
CS5880/Contrast Ratio/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  obj
CS5880/Image Enhancement/Histogram Equalization/: CMakeLists.txt  Ind_proj  Ind_proj.cbp  Makefile  README.md  main.cpp
CS5880/Image Enhancement/Histogram Streching/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  (+1 more)
CS5880/Proj1/: Makefile  README.md  main.cpp
CS5880/Proj2/: CMakeLists.txt  Makefile  README.md  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp
CS6420/Project 1/: CMakeLists.txt  operator.cpp  porter_duff.cpp
CS6420/project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  porter_duff.cbp  porter_duff.cpp  porter_duff.h  porter_duff.hpp
CS6420/project1/: CMakeLists.txt  README.md  operator.cpp  porter_duff.cpp
CS6420/project2/: CMakeLists.txt  README.md  out_warp.ecc  register.cpp  register.hpp  utill.cpp  utill.hpp
CS6420/project2/result/: out_warp.ecc
CS6420/project3/: CMakeLists.txt  README.md  freq_filter.cpp  freq_filter.hpp  utill.cpp  utill.hpp
CS6420/project4/: CMakeLists.txt  README.md
CS6420/project4/src/: map_segment.cpp  map_segment.hpp  utill.cpp  utill.hpp
CS6420/project5/: CMakeLists.txt  README.md
CS6420/project5/src/: slic.cpp  slic.hpp  utill.cpp  utill.hpp
CS6420/semester_project/: README.md
cs4250/: a.out  hw7.c
